--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,61 @@
 name: venv_project
 channels:
+  - pytorch
   - defaults
 dependencies:
+  - blas=1.0=mkl
+  - brotlipy=0.7.0=py38h2bbff1b_1003
   - ca-certificates=2022.07.19=haa95532_0
   - certifi=2022.9.24=py38haa95532_0
+  - cffi=1.15.1=py38h2bbff1b_0
   - console_shortcut=0.1.1=4
+  - cpuonly=2.0=0
+  - cryptography=37.0.1=py38h21b164f_0
+  - freetype=2.10.4=hd328e21_0
+  - intel-openmp=2021.4.0=haa95532_3556
+  - jpeg=9e=h2bbff1b_0
+  - lerc=3.0=hd77b12b_0
+  - libdeflate=1.8=h2bbff1b_5
+  - libpng=1.6.37=h2a8f88b_0
+  - libtiff=4.4.0=h8a3f274_0
+  - libuv=1.40.0=he774522_0
+  - libwebp=1.2.2=h2bbff1b_0
+  - lz4-c=1.9.3=h2bbff1b_1
+  - mkl=2021.4.0=haa95532_640
+  - mkl-service=2.4.0=py38h2bbff1b_0
+  - mkl_fft=1.3.1=py38h277e83a_0
+  - mkl_random=1.2.2=py38hf11a4ad_0
+  - numpy-base=1.23.1=py38hca35cd5_0
   - openssl=1.1.1q=h2bbff1b_0
   - pip=22.2.2=py38haa95532_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pysocks=1.7.1=py38haa95532_0
   - python=3.8.13=h6244533_0
+  - pytorch=1.12.1=py3.8_cpu_0
+  - pytorch-mutex=1.0=cpu
+  - requests=2.28.1=py38haa95532_0
   - setuptools=63.4.1=py38haa95532_0
+  - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.39.3=h2bbff1b_0
+  - tk=8.6.12=h2bbff1b_0
+  - torchaudio=0.12.1=py38_cpu
+  - torchvision=0.13.1=py38_cpu
+  - typing_extensions=4.3.0=py38haa95532_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.37.1=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py38haa95532_0
   - wincertstore=0.2=py38haa95532_2
+  - xz=5.2.6=h8cc25b3_0
+  - zlib=1.2.12=h8cc25b3_3
+  - zstd=1.5.2=h19a0ad4_0
   - pip:
     - absl-py==1.2.0
     - ale-py==0.8.0
     - atomicwrites==1.4.1
     - attrs==22.1.0
     - box2d-py==2.3.5
-    - cffi==1.15.1
     - charset-normalizer==2.1.1
     - cloudpickle==2.2.0
     - colorama==0.4.5
@@ -52,14 +87,11 @@ dependencies:
     - pluggy==1.0.0
     - proglog==0.1.10
     - py==1.11.0
-    - pycparser==2.21
     - pygame==2.1.0
     - pyopengl==3.1.6
     - pyparsing==3.0.9
     - pytest==7.0.1
     - python-dateutil==2.8.2
-    - requests==2.28.1
-    - six==1.16.0
     - swig==4.0.2
     - tomli==2.0.1
     - tqdm==4.64.1
