--- a/environment.yml
+++ b/environment.yml
@@ -3,120 +3,188 @@ channels:
   - pytorch
   - defaults
 dependencies:
+  - anyio=3.5.0=py38haa95532_0
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py38h2bbff1b_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - attrs=22.1.0=py38haa95532_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.11.1=py38haa95532_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
   - brotlipy=0.7.0=py38h2bbff1b_1003
-  - ca-certificates=2022.07.19=haa95532_0
-  - certifi=2022.9.24=py38haa95532_0
+  - ca-certificates=2023.01.10=haa95532_0
+  - certifi=2022.12.7=py38haa95532_0
   - cffi=1.15.1=py38h2bbff1b_0
+  - comm=0.1.2=py38haa95532_0
   - console_shortcut=0.1.1=4
   - cpuonly=2.0=0
   - cryptography=37.0.1=py38h21b164f_0
+  - debugpy=1.5.1=py38hd77b12b_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - entrypoints=0.4=py38haa95532_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - flit-core=3.6.0=pyhd3eb1b0_0
   - freetype=2.10.4=hd328e21_0
   - idna=3.4=py38haa95532_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2021.4.0=haa95532_3556
+  - ipykernel=6.19.2=py38hd4e2768_0
+  - ipython=8.10.0=py38haa95532_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jedi=0.18.1=py38haa95532_1
+  - jinja2=3.1.2=py38haa95532_0
   - jpeg=9e=h2bbff1b_0
+  - jsonschema=4.17.3=py38haa95532_0
+  - jupyter_client=7.4.9=py38haa95532_0
+  - jupyter_core=5.2.0=py38haa95532_0
+  - jupyter_server=1.23.4=py38haa95532_0
+  - jupyterlab_pygments=0.1.2=py_0
   - lerc=3.0=hd77b12b_0
   - libdeflate=1.8=h2bbff1b_5
+  - libiconv=1.16=h2bbff1b_2
   - libpng=1.6.37=h2a8f88b_0
+  - libsodium=1.0.18=h62dcd97_0
   - libtiff=4.4.0=h8a3f274_0
   - libuv=1.40.0=he774522_0
   - libwebp=1.2.2=h2bbff1b_0
+  - libxml2=2.9.14=h0ad7f3c_0
+  - libxslt=1.1.35=h2bbff1b_0
+  - lxml=4.9.1=py38h1985fb9_0
   - lz4-c=1.9.3=h2bbff1b_1
+  - markupsafe=2.1.1=py38h2bbff1b_0
+  - matplotlib-inline=0.1.6=py38haa95532_0
+  - mistune=0.8.4=py38he774522_1000
   - mkl=2021.4.0=haa95532_640
   - mkl-service=2.4.0=py38h2bbff1b_0
   - mkl_fft=1.3.1=py38h277e83a_0
   - mkl_random=1.2.2=py38hf11a4ad_0
-  - openssl=1.1.1q=h2bbff1b_0
+  - nbclassic=0.5.2=py38haa95532_0
+  - nbclient=0.5.13=py38haa95532_0
+  - nbconvert=6.5.4=py38haa95532_0
+  - nbformat=5.7.0=py38haa95532_0
+  - nest-asyncio=1.5.6=py38haa95532_0
+  - notebook=6.5.2=py38haa95532_0
+  - notebook-shim=0.2.2=py38haa95532_0
+  - numpy-base=1.23.5=py38h4da318b_0
+  - openssl=1.1.1t=h2bbff1b_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.2.0=py38hdc2b20a_1
   - pip=22.2.2=py38haa95532_0
+  - pkgutil-resolve-name=1.3.10=py38haa95532_0
+  - platformdirs=2.5.2=py38haa95532_0
+  - prometheus_client=0.14.1=py38haa95532_0
+  - prompt-toolkit=3.0.36=py38haa95532_0
+  - psutil=5.9.0=py38h2bbff1b_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyrsistent=0.18.0=py38h196d8e1_0
   - pysocks=1.7.1=py38haa95532_0
   - python=3.8.13=h6244533_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py38haa95532_0
   - pytorch=1.12.1=py3.8_cpu_0
   - pytorch-mutex=1.0=cpu
+  - pywin32=305=py38h2bbff1b_0
+  - pywinpty=2.0.10=py38h5da7b33_0
+  - pyzmq=23.2.0=py38hd77b12b_0
   - requests=2.28.1=py38haa95532_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=63.4.1=py38haa95532_0
   - six=1.16.0=pyhd3eb1b0_1
+  - sniffio=1.2.0=py38haa95532_1
+  - soupsieve=2.3.2.post1=py38haa95532_0
   - sqlite=3.39.3=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - terminado=0.17.1=py38haa95532_0
+  - tinycss2=1.2.1=py38haa95532_0
   - torchaudio=0.12.1=py38_cpu
   - torchvision=0.13.1=py38_cpu
+  - tornado=6.2=py38h2bbff1b_0
+  - traitlets=5.7.1=py38haa95532_0
+  - typing-extensions=4.4.0=py38haa95532_0
+  - typing_extensions=4.4.0=py38haa95532_0
   - urllib3=1.26.12=py38haa95532_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py38_1
+  - websocket-client=0.58.0=py38haa95532_4
   - wheel=0.37.1=pyhd3eb1b0_0
   - win_inet_pton=1.1.0=py38haa95532_0
   - wincertstore=0.2=py38haa95532_2
+  - winpty=0.4.3=4
   - xz=5.2.6=h8cc25b3_0
+  - zeromq=4.3.4=hd77b12b_0
   - zlib=1.2.12=h8cc25b3_3
   - zstd=1.5.2=h19a0ad4_0
   - pip:
-    - absl-py==1.2.0
-    - ale-py==0.8.0
-    - atomicwrites==1.4.1
-    - attrs==22.1.0
-    - box2d-py==2.3.5
-    - cachetools==5.2.0
-    - charset-normalizer==2.1.1
-    - cloudpickle==2.2.0
-    - colorama==0.4.5
-    - contourpy==1.0.5
-    - cycler==0.11.0
-    - cython==0.29.32
-    - decorator==4.4.2
-    - fasteners==0.18
-    - fonttools==4.37.4
-    - glfw==2.5.5
-    - google-auth==2.14.1
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.50.0
-    - gym==0.21.0
-    - gym-notices==0.0.8
-    - imageio==2.22.1
-    - imageio-ffmpeg==0.4.7
-    - importlib-metadata==4.13.0
-    - importlib-resources==5.10.0
-    - iniconfig==1.1.1
-    - kiwisolver==1.4.4
-    - lockfile==0.12.2
-    - lz4==4.0.2
-    - markdown==3.4.1
-    - markupsafe==2.1.1
-    - matplotlib==3.6.1
-    - moviepy==1.0.3
-    - mujoco==2.2.0
-    - mujoco-py==2.1.2.14
-    - numpy==1.23.3
-    - oauthlib==3.2.2
-    - opencv-python==4.6.0.66
-    - packaging==21.3
-    - pandas==1.5.1
-    - pluggy==1.0.0
-    - proglog==0.1.10
-    - protobuf==3.20.3
-    - py==1.11.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pybullet==3.2.5
-    - pygame==2.1.0
-    - pyglet==1.5.27
-    - pyopengl==3.1.6
-    - pyparsing==3.0.9
-    - pytest==7.0.1
-    - python-dateutil==2.8.2
-    - pytz==2022.6
-    - requests-oauthlib==1.3.1
-    - rsa==4.9
-    - scipy==1.9.3
-    - stable-baselines3==1.6.2
-    - swig==4.0.2
-    - tensorboard==2.11.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - tomli==2.0.1
-    - tqdm==4.64.1
-    - typing-extensions==4.4.0
-    - werkzeug==2.2.2
-    - zipp==3.9.0
-prefix: C:\Users\CJews\anaconda3\envs\venv_project
+      - absl-py==1.2.0
+      - ale-py==0.8.0
+      - atomicwrites==1.4.1
+      - box2d-py==2.3.5
+      - cachetools==5.2.0
+      - charset-normalizer==2.1.1
+      - cloudpickle==2.2.0
+      - colorama==0.4.5
+      - contourpy==1.0.5
+      - cycler==0.11.0
+      - cython==0.29.32
+      - decorator==4.4.2
+      - fasteners==0.18
+      - fonttools==4.37.4
+      - glfw==2.5.5
+      - google-auth==2.14.1
+      - google-auth-oauthlib==0.4.6
+      - grpcio==1.50.0
+      - gym==0.21.0
+      - gym-notices==0.0.8
+      - imageio==2.22.1
+      - imageio-ffmpeg==0.4.7
+      - importlib-metadata==4.13.0
+      - importlib-resources==5.10.0
+      - iniconfig==1.1.1
+      - kiwisolver==1.4.4
+      - lockfile==0.12.2
+      - lz4==4.0.2
+      - markdown==3.4.1
+      - matplotlib==3.6.1
+      - moviepy==1.0.3
+      - mujoco==2.2.0
+      - mujoco-py==2.1.2.14
+      - numpy==1.23.3
+      - oauthlib==3.2.2
+      - opencv-python==4.6.0.66
+      - packaging==21.3
+      - pandas==1.5.1
+      - pluggy==1.0.0
+      - proglog==0.1.10
+      - protobuf==3.20.3
+      - py==1.11.0
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pybullet==3.2.5
+      - pygame==2.1.0
+      - pyglet==1.5.27
+      - pyopengl==3.1.6
+      - pyparsing==3.0.9
+      - pytest==7.0.1
+      - pytz==2022.6
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
+      - scipy==1.9.3
+      - stable-baselines3==1.6.2
+      - swig==4.0.2
+      - tensorboard==2.11.0
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - tk==0.1.0
+      - tomli==2.0.1
+      - tqdm==4.64.1
+      - werkzeug==2.2.2
+      - zipp==3.9.0
+prefix: C:\Users\cjews.CHRISTOPHER\anaconda3\envs\venv_project
